# Refer to: https://packaging.python.org/en/latest/guides/writing-pyproject-toml/
# For pytest: https://docs.pytest.org/en/stable/reference/customize.html
[build-system]
requires = ["setuptools >= 82.0.1"]
build-backend = "setuptools.build_meta"

[project]
dynamic = ["version"]
name = "my_package"
description="My Awesome New Package"
authors = [
    {name = "Nathan A. Mahynski", email = "nathan.mahynski@gmail.com"}
]
maintainers = [
    {name = "Nathan A. Mahynski", email = "nathan.mahynski@gmail.com"}
]
keywords = []
classifiers = [
    "Development Status :: 1 - Planning",
    "Intended Audience :: Science/Research",
    "Operating System :: OS Independent",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Programming Language :: Python :: 3.13",
]
readme = "README.md"
# Replace with an SPDX expression (e.g. license = "MIT") once LICENSE.md
# is populated. See PEP 639.
license = {file = "LICENSE.md"}
requires-python = ">=3.10"
# Intentionally empty: this is a template. Add only what your package actually
# imports at runtime. Heavy science deps live in the `science` extra below so
# users opt in.
dependencies = []

[project.optional-dependencies]
science = [
    # Loose floors chosen to match Python 3.13 wheel availability on PyPI.
    # Tighten only when your code actually depends on a newer API.
    "matplotlib>=3.9",
    "numpy>=2.2.6",
    "pandas>=2.2",
    "scikit-learn>=1.7.2",
    "scipy>=1.15.3",
    "seaborn>=0.13.2",
]
test = [
    "pytest>=9.1.1",
    "pytest-cov",
]
docs = [
    "sphinx",
    "sphinx-book-theme>=1.1.4",
    "readthedocs-sphinx-search>=0.3.2",
    "nbsphinx>=0.9.2",
    "sphinx_gallery>=0.21.0",
]
notebook = [
    "IPython",
    "ipywidgets",
    "ipykernel",
]
dev = [
    "my_package[test,docs,notebook]",
    "pre-commit>=4.6.0",
    "mypy",
]

[tool.pytest.ini_options]
testpaths = [
    "tests",
]

[tool.coverage.run]
source = ["my_package"]
branch = true

[tool.coverage.report]
exclude_lines = [
    "pragma: no cover",
    "raise NotImplementedError",
    "if TYPE_CHECKING:",
    "if __name__ == .__main__.:",
]

[tool.ruff]
line-length = 100
target-version = "py310"

[tool.ruff.lint]
select = [
    "E",   # pycodestyle errors
    "W",   # pycodestyle warnings
    "F",   # pyflakes
    "I",   # isort
    "B",   # flake8-bugbear
    "UP",  # pyupgrade
]

[tool.mypy]
# Permissive defaults so a fresh template checkout passes. Tighten as your
# code grows: turn on `disallow_untyped_defs = true` once you're ready to
# require type annotations on public APIs.
python_version = "3.10"
ignore_missing_imports = true
warn_unused_ignores = true
warn_redundant_casts = true
warn_unused_configs = true
strict_equality = true
check_untyped_defs = true

[tool.setuptools.packages.find]
where = ["."]
include = ["my_package*"]

[tool.setuptools.package-data]
# Ship the PEP 561 marker so downstream consumers see the package's type hints.
my_package = ["py.typed"]

[tool.setuptools.dynamic]
version = {attr = "my_package.__version__"}

[project.urls]
Repository = "https://github.com/mahynski/my_package.git"
Documentation = "https://my_package.readthedocs.io/"
Issues = "https://github.com/mahynski/my_package/issues"
